azure/service-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: motive-back-end-service
spec:
  ports:
    - port: 80
  selector:
    type: motive-back-end
  type: LoadBalancer
status:
  loadBalancer:
