azure/motive-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motive-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - api.motivepick.com
      secretName: tls-secret
  rules:
    - host: api.motivepick.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: motive-back-end-service
                port:
                  number: 80
